--- a/adminpage.css
+++ b/adminpage.css
@@ -92,14 +92,14 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; /* Center content vertically */
+  justify-content: center; 
   border-radius: 10px;
   color: black;
   font-size: 18px;
   font-weight: bold;
   padding: 10px;
   text-align: center;
-  margin: 70px; /* Add margin to create space between cards */
+  margin: 70px; 
 }
 
 .boarders-card {
