--- a/assignment.css
+++ b/assignment.css
@@ -81,7 +81,7 @@ body {
 .table td {
   color: #ffffff;
   text-align: left;
-  padding-left: 10px; /* Add padding for better readability */
+  padding-left: 10px; 
   
   
 }
@@ -114,5 +114,5 @@ body {
 }
 
 @media screen and (max-width: 500px) {
-  /* Adjustments for smaller screens */
+
 }
