--- a/boarder_pop.css
+++ b/boarder_pop.css
@@ -75,13 +75,13 @@
   .table {
     background-color: rgba(0, 0, 0, 0.6);
    
-    width: 80%; /* Ensure the table takes full width */
+    width: 80%; 
     height: 50px;
   }
   
   .table td {
     color: #ffffff;
-    text-align: left; /* Align text to the left */
+    text-align: left; 
     padding-left: 10px; /* Add padding for better readability */
     
     
