--- a/boarder_pop.css
+++ b/boarder_pop.css
@@ -82,7 +82,7 @@
   .table td {
     color: #ffffff;
     text-align: left; 
-    padding-left: 10px; /* Add padding for better readability */
+    padding-left: 10px; 
     
     
   }
@@ -108,5 +108,5 @@
   }
   
   @media screen and (max-width: 500px) {
-    /* Adjustments for smaller screens */
+    
   }
