--- a/invoice.css
+++ b/invoice.css
@@ -94,8 +94,8 @@
   
   .table td {
     color: #ffffff;
-    text-align: left; /* Align text to the left */
-    padding-left: 10px; /* Add padding for better readability */
+    text-align: left; 
+    padding-left: 10px; 
     
     
     
