--- a/notice.css
+++ b/notice.css
@@ -86,7 +86,7 @@
     justify-content: space-between;
   }
 
-   /* Style for notice board */
+
    .notice-container {
     border: 2px solid #ccc;
     border-radius: 5px;
@@ -103,8 +103,8 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white */
-    backdrop-filter: blur(10px); /* Apply blur effect */
+    background-color: rgba(255, 255, 255, 0.8); 
+    backdrop-filter: blur(10px); 
 }
 
 .notice-card h3 {
