--- a/notice.css
+++ b/notice.css
@@ -115,10 +115,10 @@
     margin: 0;
 }
 
-/* Style for modal */
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    display: none; 
+    position: fixed; 
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
