--- a/notice.css
+++ b/notice.css
@@ -131,9 +131,9 @@
 
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto; /* 15% from the top and centered */
+    margin: 5% auto;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
     border-radius: 5px;
     padding: 20px;
 }
